# src/main/java/com/yelp/nrtsearch/server/luceneserver/search/SearcherResult.java
@@ -1,0 +1,45 @@
+/*
+ * Copyright 2020 Yelp Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package com.yelp.nrtsearch.server.luceneserver.search;
+
+import com.yelp.nrtsearch.server.grpc.CollectorResult;
+import java.util.Map;
+import org.apache.lucene.search.TopDocs;
+
+/**
+ * Result returned from searching with the {@link SearchCollectorManager}. Contains the query {@link
+ * TopDocs} and any additional {@link CollectorResult}s.
+ */
+public class SearcherResult {
+
+  private final TopDocs topDocs;
+  private final Map<String, CollectorResult> collectorResults;
+
+  public SearcherResult(TopDocs topDocs, Map<String, CollectorResult> collectorResults) {
+    this.topDocs = topDocs;
+    this.collectorResults = collectorResults;
+  }
+
+  /** Get top documents resulting from query. */
+  TopDocs getTopDocs() {
+    return topDocs;
+  }
+
+  /** Get map containing the results of any additional collectors. */
+  Map<String, CollectorResult> getCollectorResults() {
+    return collectorResults;
+  }
+}
